# food-mas

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
src/: config.py  graph.py  llm.py  logging_setup.py  state.py
src/agents/: menu_selector.py  order_validator.py  planner.py  restaurant_finder.py
src/db/: models.py  seed.py  session.py
src/tools/: base.py  fetch_menu_items.py  parse_request.py  query_restaurants.py  validate_order.py
src/ui/: app.py
tests/: conftest.py  llm_judge.py  test_adversarial.py  test_integration.py  test_menu_selector.py  test_order_validator.py  test_planner.py  test_restaurant_finder.py  test_tools_properties.py
