[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "food-mas"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "structlog>=24.4",
    "streamlit>=1.40",
    "ollama>=0.4",
    "cryptography>=43.0",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.112",
    "pytest-cov>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
